# trie-wasm

./: Cargo.toml  hello.js  index.html
src/structure/: mod.rs  node.rs  trie.rs
