[package]
name = "trie-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Byungjin Lee <byungjin.dev@gmail.com>"]
description = "A Trie Data Structure to improve performance on Web Environment"
license = "MIT"
repository = "https://github.com/ByungJin-Lee/trie-wasm.git"
categories = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
